# timetrack

./: CMakeLists.txt
include/: task.hpp  timer.hpp  workHistory.hpp
src/: CMakeLists.txt  main.cpp  task.cpp  workHistory.cpp
test/: CMakeLists.txt  TaskTest.cpp  WorkHistoryTest.cpp
